# ChangeLog for net-misc/nx
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/nx/ChangeLog,v 1.82 2013/08/21 06:33:19 yngwin Exp $

*nx-3.5.0.20-r1 (21 Aug 2013)

  21 Aug 2013; Ben de Groot <yngwin@gentoo.org> +nx-3.5.0.20-r1.ebuild:
  Non-maintainer commit, adding a warning about using cairo[xlib-xcb] when gtk
  apps break, to fix bug #441878

  11 Jun 2013; Agostino Sarubbo <ago@gentoo.org> nx-3.5.0.20.ebuild:
  Stable for x86, wrt bug #472582

  11 Jun 2013; Agostino Sarubbo <ago@gentoo.org> nx-3.5.0.20.ebuild:
  Stable for amd64, wrt bug #472582

*nx-3.5.0.20 (29 Mar 2013)

  29 Mar 2013; Bernard Cafarelli <voyageur@gentoo.org> -nx-3.5.0.19.ebuild,
  +nx-3.5.0.20.ebuild:
  Still keeping in sync with upstream

*nx-3.5.0.19 (28 Mar 2013)

  28 Mar 2013; Bernard Cafarelli <voyageur@gentoo.org> -nx-3.5.0.18.ebuild,
  +nx-3.5.0.19.ebuild:
  Version bump to keep in sync with upstream, code is identical to 3.5.0.18

*nx-3.5.0.18 (27 Mar 2013)

  27 Mar 2013; Bernard Cafarelli <voyageur@gentoo.org> +nx-3.5.0.18.ebuild:
  Version bump

*nx-3.5.0.17-r1 (09 Jan 2013)

  09 Jan 2013; Bernard Cafarelli <voyageur@gentoo.org> +nx-3.5.0.17-r1.ebuild,
  +files/nx-3.5.0.17-cflags_ar_ranlib.patch:
  Finally found how to respect AR/RANLIB, fix some missing CC/CXX, bug #445794

*nx-3.5.0.17 (08 Jan 2013)

  08 Jan 2013; Bernard Cafarelli <voyageur@gentoo.org> +nx-3.5.0.17.ebuild:
  Version bump, includes new system to define NX keystrokes

  16 Dec 2012; Agostino Sarubbo <ago@gentoo.org> nx-3.5.0.15.ebuild:
  Stable for x86, wrt bug #445766

  03 Dec 2012; <ago@gentoo.org> nx-3.5.0.15.ebuild:
  Stable for amd64, wrt bug #445766

*nx-3.5.0.16 (15 Nov 2012)

  15 Nov 2012; Bernard Cafarelli <voyageur@gentoo.org> -nx-3.5.0-r1.ebuild,
  -nx-3.5.0-r3.ebuild, -files/nx-3.5.0-libpng15.patch, +nx-3.5.0.16.ebuild:
  Version bump, remove last versions based on nomachine packaging
