@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/nx
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/nx/ChangeLog,v 1.82 2013/08/21 06:33:19 yngwin Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/nx/ChangeLog,v 1.83 2013/09/04 11:18:34 voyageur Exp $
+
+*nx-3.5.0.21 (04 Sep 2013)
+
+  04 Sep 2013; Bernard Cafarelli <voyageur@gentoo.org> +nx-3.5.0.21.ebuild:
+  Version bump, use system freetype, install default icon and keystrokes file.
+  Keep warning for #441878 for now
 
 *nx-3.5.0.20-r1 (21 Aug 2013)
 
